Added module system to catalog service